# voyc

./: .clang-format  .gitignore  CMakeLists.txt  example.voy
.kimi/: 2026-04-30-note-scope.md  2026-04-30-note-style.md
configs/: .clangd
include/voyc/: lexer.hpp  token.hpp
notes/: STL_fstream.md  STL_functional.md  STL_string_view.md  bom_utf8.md  build-toolchain.md  cpp_eof.md  cpp_header_design.md  cpp_include_path.md  cpp_main_args.md  cpp_namespace_design.md  eof-c-cpp.md  gh_basics.md  main-args.md  vscode-configs.md  vscode-shortcuts.md  zsh_basics.md
src/: lexer.cpp  main.cpp
